# Mimer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: okf-profile.md  vision.md
docs/adr/: 0001-store-scope-per-layer.md  0002-three-layer-memory-okf-for-permanent.md  0003-git-as-capture-source-not-store.md  0004-automated-distillation-ai-native.md  0005-recall-agent-invoked-not-always-on.md  0006-model-stack-local-embeddings-haiku.md  0007-vector-store-sqlite-vec-fts5.md  0008-project-identity-registry.md  0009-claude-access-from-hooks.md  0010-claude-code-first-cowork-deferred.md  0011-concurrency-locking-derived-index.md  0012-forgetting-across-layers.md  0013-scoped-permanent-memory.md  0014-memory-is-data-not-instructions.md  0015-concept-identity-supersession.md  0016-snapshot-lifecycle.md  0017-cap-eviction-no-silent-loss.md  0018-editable-judgment-rules.md  0019-coexist-with-native-memory.md  0020-redaction-at-the-write-seam.md  0021-git-as-citation-source.md  0022-project-identity-remote-or-path.md  0023-session-pass-distils-from-raw.md  0024-concept-identity-rename-supersession.md  0025-replace-native-auto-memory.md  0026-bootstrap-removed.md  0027-leakage-guard-global-scope.md  0028-read-only-cli-browser.md  0029-framing-at-the-presentation-seam.md
hooks/: hooks.json
scripts/: check_version.py
skills/memory/: SKILL.md
src/mimer/: __init__.py  bootstrap.py  boundary.py  browse.py  bundle.py  capture.py  clock.py  curate.py  db.py  digest.py  distill.py  embedding.py  erasure.py  failure_log.py  framing.py  gitreader.py  guard.py  index.py  install.py  leakage.py  ledger.py  llm.py  longterm.py  manage.py  manifest.py  matcher.py  native_memory.py  paths.py  pause.py  project.py  recall.py  redaction.py  registry.py  shortterm.py  snapshot.py  store.py  storeio.py  storewalk.py  text.py  tombstones.py  (+2 more)
src/mimer/hooks/: __init__.py  runner.py  session_end.py  session_start.py  stop.py
tests/: __init__.py  conftest.py  gitutil.py  harness.py  secret_samples.py  test_bootstrap.py  test_bootstrap_removed.py  test_boundary.py  test_browse.py  test_cap.py  test_capture.py  test_clock.py  test_controls.py  test_curate.py  test_db.py  test_dev_ergonomics.py  test_digest.py  test_distill.py  test_docs_truthfulness.py  test_failure_log.py  test_foundations.py  test_framing.py  test_git_citation.py  test_gitreader.py  test_index_ranking.py  test_inject.py  test_install.py  test_integration_llm.py  test_integration_transcript.py  test_leakage.py  test_ledger.py  test_lock_ownership.py  test_manage.py  test_matcher.py  test_memory_skill.py  test_native_memory.py  test_native_warning.py  test_packaging.py  test_paths.py  test_permanent.py  (+19 more)
tests/fixtures/: real_transcript.jsonl
