[project]
name = "mimer"
version = "0.2.1"
description = "An AI-native memory and knowledge system for Claude Code agents."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Thomas Barregren", email = "thomas@kntnt.com" }]
keywords = ["memory", "knowledge", "claude-code", "okf", "second-brain"]
dependencies = [
    "model2vec>=0.6",
    "pyyaml>=6.0.3",
    "sqlite-vec>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/Kntnt/Mimer"
Repository = "https://github.com/Kntnt/Mimer"

# Console entry points invoked by the plugin's hooks (see hooks/hooks.json).
# Each is the target of one Claude Code hook event and reads its JSON payload
# from stdin.
[project.scripts]
mimer-session-start = "mimer.hooks.session_start:main"
mimer-stop = "mimer.hooks.stop:main"
mimer-session-end = "mimer.hooks.session_end:main"
mimer-memory = "mimer.curate:main"
mimer-reindex = "mimer.index:reindex_main"
mimer-recall = "mimer.recall:main"
mimer-manage = "mimer.manage:main"
mimer-browse = "mimer.browse:main"
mimer-install = "mimer.install:install_main"
mimer-uninstall = "mimer.install:uninstall_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimer"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "ruff>=0.14",
    "mypy>=1.14",
    "types-pyyaml>=6.0.12.20260518",
    "editorconfig>=0.17",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]

# Third-party libraries without type stubs.
[[tool.mypy.overrides]]
module = ["sqlite_vec", "model2vec"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: opt-in test that drives a live `claude` binary (set MIMER_INTEGRATION=1); skipped by default",
    "packaging: opt-in smoke test that builds and installs the wheel (set MIMER_PACKAGING=1); needs no `claude` binary",
    "embedding: the test loads the embedding model, directly or via a hook subprocess",
]

# Coverage is measured over the package source. It is reported, not gated,
# so a run without pytest-cov (or without the --cov flag) still works; CI
# passes --cov explicitly (see .github/workflows/ci.yml).
#
# The source is the importable package, not the "src/mimer" path, so a hook
# subprocess spawned with a different working directory still resolves it.
# parallel mode makes each process (this one plus every hook subprocess the
# test harness spawns) write its own data file; pytest-cov combines them, so
# the report reflects the hook code that runs only in subprocesses.
[tool.coverage.run]
source = ["mimer"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
